# neural-pruning

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
configs/examples/: lenet300100.example.toml  lenet5.example.toml
deep_compression/: prune.py  test.py  train.py
deep_compression/data/: dataset.py
deep_compression/model/: __init__.py  lenet.py  pruned.py
deep_compression/utils/: __init__.py  loader.py  misc.py  parser.py
neural_pruning/: prune.py  test.py  train.py
neural_pruning/config/: __init__.py  config.py
neural_pruning/data/: dataset.py
neural_pruning/helper/: __init__.py  _getters.py  helpers.py  modes.py
neural_pruning/model/: __init__.py  _counter.py  prunable.py  pruned.py  unpruned.py
scripts/: generate_table.py
